<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="84dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/submit_username_edit_text_view"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/edit_text_style"
            android:hint="@string/username"
            android:paddingLeft="10dp"
            android:fontFamily="sans-serif"
            android:layout_marginBottom="18dp"
            android:inputType="textAutoComplete" >

        </EditText>

        <EditText
            android:id="@+id/submit_password_edit_text_view"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/edit_text_style"
            android:hint="@string/password"
            android:paddingLeft="10dp"
            android:fontFamily="sans-serif"
            android:layout_marginBottom="18dp"
            android:inputType="textPassword" >

        </EditText>

        <EditText
            android:id="@+id/submit_confirmpassword_edit_text_view"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/edit_text_style"
            android:hint="@string/confirm_password"
            android:fontFamily="sans-serif"
            android:paddingLeft="10dp"
            android:inputType="textPassword" >

        </EditText>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/submit_user_details_activity_button"
            android:layout_width="264dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_style"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/submit"
            android:fontFamily="sans-serif"
            android:textAllCaps="true"
            android:textColor="#ffffff"
            android:textStyle="bold" />

    </LinearLayout>


</ScrollView>