<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:fitsSystemWindows="true"


    tools:context="app.com.example.android.myscribe.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/app_name_text_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textColor="#000000"
            android:textSize="32dp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp">

            <EditText
                android:id="@+id/input_username_edit_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="textAutoComplete" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp">

            <EditText
                android:id="@+id/input_password_edit_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/login_activity_button"
            android:layout_width="264dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:background="@drawable/button_style"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/login_activity"
            android:textAllCaps="true"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/facebook_login_activity_button"
            android:layout_width="264dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_style"
            android:gravity="center"
            android:padding="80dp" />


        <!--<View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="42dp"
            android:background="@color/colorPrimaryDark"
            android:padding="8dp" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/forgot_password_redirect_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="left"
                android:padding="10dp"
                android:text="@string/forgot_password_redirect_text_view"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/sign_up_redirect_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="right"
                android:padding="10dp"
                android:text="@string/sign_up_redirect_text_view"
                android:textSize="14dp" />

        </LinearLayout>

    </LinearLayout>


</ScrollView>