<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="24dp"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textSize="32dp" />


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <EditText
                android:id="@+id/input_aadhaar_number_edit_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/aadhaar_no"
                android:inputType="numberSigned"
                android:textSize="28dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/sign_up_button"
            android:layout_width="264dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_style"
            android:gravity="center"
            android:text="@string/create_account"
            android:textAllCaps="true"
            android:textColor="#ffffff"
            android:textSize="18dp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>